other/inspect-csr/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: inspect-csr
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
