other/inspect-csr/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: inspect-csr
spec:
  steps:
  - name: step-01
    try:
    - script:
        content: |
          #!/bin/bash
          set -eu
          export USERNAME=inspect-csr-user
          export CA=ca.crt
          #### Get CA certificate from kubeconfig assuming it's the first in the list.
          kubectl config view --raw -o jsonpath='{.clusters[0].cluster.certificate-authority-data}' | base64 --decode > ./ca.crt
          #### Set CLUSTER_SERVER from kubeconfig assuming it's the first in the list.
          CLUSTER_SERVER="$(kubectl config view --raw -o jsonpath='{.clusters[0].cluster.server}')"
          #### Set CLUSTER from kubeconfig assuming it's the first in the list.
          CLUSTER="$(kubectl config view --raw -o jsonpath='{.clusters[0].name}')"
          #### Generate private key
          openssl genrsa -out $USERNAME.key 2048
          #### Create CSR
          openssl req -new -key $USERNAME.key -out $USERNAME.csr -subj "/O=testorg/CN=$USERNAME"
          #### Send CSR to kube-apiserver for approval
          cat <<EOF | kubectl apply -f -
          apiVersion: certificates.k8s.io/v1
          kind: CertificateSigningRequest
          metadata:
            name: $USERNAME
          spec:
            request: $(cat $USERNAME.csr | base64 | tr -d '\n')
            signerName: kubernetes.io/kube-apiserver-client
            usages:
            - client auth
          EOF
          #### Approve CSR
          kubectl certificate approve $USERNAME
          #### Download certificate
          kubectl get csr $USERNAME -o jsonpath='{.status.certificate}' | base64 --decode > $USERNAME.crt
          ####
          #### Create the credential object and output the new kubeconfig file
          kubectl config set-credentials $USERNAME --client-certificate=$USERNAME.crt --client-key=$USERNAME.key --embed-certs
          #### Set the context
          kubectl config set-context $USERNAME-context --user=$USERNAME --cluster=$CLUSTER
          # Delete CSR
          kubectl delete csr $USERNAME
  - name: step-02
    try:
    - apply:
        file: ../inspect-csr.yaml
    - apply:
        file: crolb-user.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-03
    try:
    - script:
        content: |
          cat <<EOF | kubectl --context=inspect-csr-user-context apply -f -
          apiVersion: certificates.k8s.io/v1
          kind: CertificateSigningRequest
          metadata:
            name: inspect-csr-user
          spec:
            request: $(cat inspect-csr-user.csr | base64 | tr -d '\n')
            signerName: kubernetes.io/kube-apiserver-client
            usages:
            - client auth
          EOF
    - assert:
        file: chainsaw-step-03-assert-1.yaml
  - name: step-04
    try:
    - script:
        content: kubectl delete csr inspect-csr-user
    - script:
        content: kubectl config unset users.inspect-csr-user
    - script:
        content: kubectl config unset contexts.inspect-csr-user-context
